[package]
name = "virtio_dev"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation for Virtio device interfaces."

[dependencies]
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
memory_addr = "0.3"
axerrno = "0.1.0"


