[workspace]
resolver = "2"

members =  [
	"virtio-bindings",
	"virtio-queue",
	"virtio-device",
	"axvirtio-blk",
	"axvirtio",
]

[workspace.package]
version = "0.1.0"
authors = ["Debin <luodeb@outlook.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = ""
repository = ""

[workspace.dependencies]
virtio-bindings = { path = "virtio-bindings" }
virtio-queue = { path = "virtio-queue" }
virtio-device = { path = "virtio-device" }
axvirtio-blk = { path = "axvirtio-blk" }
axvirtio = { path = "axvirtio" }

vm-memory = "0.16.0"
vmm-sys-util = "0.13.0"

