[package]
name = "axvirtio-blk"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.9"
axerrno = "0.1.0"

axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axhal = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }
memory_addr = "0.3"

virtio-device = { workspace = true }
virtio-queue = { workspace = true }
virtio-bindings = { workspace = true }
